# cadex_assignment

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: additional_curves_1.txt  additional_curves_2.txt  additional_curves_3.txt  curves_to_check.txt
src/: curve.cpp  curve.hpp  eh.hpp  main.cpp  parser.cpp  parser.hpp
